# friar

./: .gitignore  .gitmodules  README.md  meson.build  meson.options
doc/bytecode/: ref.typ
scripts/: run-tests.sh
src/: args.cpp  args.hpp  bytecode.hpp  config.hpp.in  decode.hpp  disas.cpp  disas.hpp  idiom.cpp  idiom.hpp  interpreter.cpp  interpreter.hpp  loader.cpp  loader.hpp  main.cpp  meson.build  runtime.hpp  time.hpp  util.cpp  util.hpp  verifier.cpp  verifier.hpp
