option('runtime_path', type: 'string', value: 'third-party/lama/runtime', description: 'A path to the Lama runtime directory')
option('proc_addr_verification', type: 'boolean', value: false, description: 'Whether to reject instructions shared by multiple procedures during verification')
option('dynamic_verification', type: 'boolean', value: false, description: 'Perform bytecode verification dynamically, during interpretation, in place of static verification. Slower, but accepts more (dubiously constructed) programs')

option('verifier_trace', type: 'boolean', value: false, description: 'Enable bytecode verification tracing')
option('interpreter_trace', type: 'integer', value: 0, min: 0, max: 2, description: 'Tracing level during interpretation (0 for none, 1 to print each instruction, 2 to also print the stack)')
